--- a/product-service-ts/package.json
+++ b/product-service-ts/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "pg": "^8.6.0",
     "source-map-support": "^0.5.19"
   },
-
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.25",
+    "csv-parser": "^3.0.0",
     "jest": "^27.0.6",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
@@ -48,7 +49,7 @@
     "moduleDirectories": [
       "node_modules",
       "src"
-  ]
+    ]
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
