--- a/product-service-ts/package.json
+++ b/product-service-ts/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "aws-sdk": "^2.943.0",
     "pg": "^8.6.0",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "csv-parser": "^3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.5",
@@ -21,7 +23,6 @@
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.25",
-    "csv-parser": "^3.0.0",
     "jest": "^27.0.6",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
