--- a/bff-service/.ebextensions/options.config
+++ b/bff-service/.ebextensions/options.config
@@ -1,5 +1,5 @@
-options_settings:
+option_settings:
     aws:elasticbeanstalk:application:environment:
         NODE_ENV: 'production'
-        product: 'https://.execute-api.eu-west-1.amazonaws.com/dev'
-        cart: 'http://laziriti-cart-api-develop.eu-west-1.elasticbeanstalk.com/api'
+        product: 'https://ksasg882n4.execute-api.eu-west-1.amazonaws.com/dev/createProduct'
+        cart: 'http://laziriti-cart-api-develop.eu-west-1.elasticbeanstalk.com/api/profile/cart'
