--- a/bff-service/package.json
+++ b/bff-service/package.json
@@ -4,7 +4,11 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "jest --no-cache"
+    "test": "jest --no-cache",
+    "start": "node index.js",
+    "set-env": "eb setenv `cat .env.eb | sed '/^#/ d'`",
+    "eb-init": "eb init --platform node.js --region eu-west-1",
+    "eb-create": "eb create development --single --cname laziriti-bff-develop"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -13,7 +17,10 @@
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
     "aws-sdk": "^2.943.0",
+    "axios": "^0.21.1",
     "csv-parser": "^3.0.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "pg": "^8.6.0",
     "source-map-support": "^0.5.19"
   },
