--- a/bff-service/.env
+++ b/bff-service/.env
@@ -1,2 +1,3 @@
-product=https://ksasg882n4.execute-api.eu-west-1.amazonaws.com/dev/createProduct
+product=https://ksasg882n4.execute-api.eu-west-1.amazonaws.com/dev/products
+createProducts=https://ksasg882n4.execute-api.eu-west-1.amazonaws.com/dev/createProduct
 cart=http://laziriti-cart-api-develop.eu-west-1.elasticbeanstalk.com/api/profile/cart
